# infra

./: .gitattributes  .gitignore  CLAUDE.md  README.md  wss_node.md
.github/workflows/: ansible_deploy.yml  ansible_deploy_ephemeral.yml  devnet_main_deploy.yml  docker_build.yml  ephemeral_devnet_aws_deploy.yml  ephemeral_devnet_hetzner_deploy.yml  gemini_3f_main_deploy.yml  gemini_3g_main_deploy.yml  release-charts.yaml  terraform_gh_runner.yml  terraform_template_deploy.yml  terraform_template_ephemeral_deploy.yml
_docs/: Index.md  README.md
_docs/1_Cloudflare/: Index.md  README.md
_docs/2_General/: Index.md  README.md
_docs/3_DigitalOcean/: README.md
_docs/4_Docker/: Index.md  README.md
_docs/5_SubspaceNetwork/: Index.md  README.md  docker-compose.yml  node-docker-compose.yml  relayer-docker-compose.yml  run-subspace-containers.sh
_docs/6_BlockArchives/: .env  README.md  docker-compose.yml
_docs/7_SubsquidArchive/: README.md  archive.subspace.network  docker-compose.yml
_docs/8_BlockExplorerSquid/: README.md  blockexplorer.subspace.network  docker-compose.yml  (+1 more)
ansible/: README.md  hosts.yml
auto-drive/: broker.tf  db.tf  main.tf  outputs.tf  secret.tf  variables.tf
aws/: README.md
cloud-hsm/: ami.tf  backend.tf  main.tf  network.tf  outputs.tf  provider.tf  variables.tf
cloudflare-lb/: main.tf  outputs.tf  variables.tf
dns/: autonomys-xyz.tf  backend.tf  data.tf  records.tf  subspace-foundation.tf
eks/: terraform.tfvars.example
explorer/: README.md
front-end-project/: data-sources.tf  droplets.tf  project.tf
github-runners/: network.tf  outputs.tf  provider.tf  variables.tf  vpc.tf
modules/node-utils/: .dockerignore  Cargo.toml  Dockerfile  rust-toolchain.toml  rustfmt.toml
modules/node-utils/src/: cli.rs  compose_create.rs  infisical.rs  main.rs  sync_config.rs  types.rs
modules/node-utils/src/templates/: docker-compose.hbs  prometheus.hbs
network-primitives/: bootstrap_node_provisioner.tf  common.tf  dns.tf  domain_node_provisioner.tf  droplets.tf  farmer_node_provisioner.tf  firewall.tf  full_node_provisioner.tf  main.tf  outputs.tf  projects.tf  rpc_node_provisioner.tf  variables.tf
resources/: README.md  common.tf  current-plan.tfplan  droplets.tf  outputs.tf  projects.tf  terraform.tfstate  volumes.tf
rke/: .gitignore  Makefile  README.md
scripts/: cpu-tuning.service  detect-favoured-cpu.sh  generate_node_keys.sh  install_docker.sh  installer.sh  restore_node_keys.sh  snapshots.sh
testing-framework/: README.md
testnet-resources/: droplets.tf  project.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
(+1407 files in other folders)
