[package]
name = "node-utils"
version = "0.1.0"
edition = "2024"
description = "Node utilities for Key and Docker Compose file generation"
authors = ["Vedhavyas Singareddi <ved@subspace.network>"]
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
]

[dependencies]
bip39 = { version = "2.2.0", features = ["rand"] }
clap = { version = "4.5.41", features = ["derive"] }
ed25519-dalek = "2.2.0"
handlebars = "6.3.2"
hex = "0.4.3"
libp2p-identity = { version = "0.2.12", features = ["ed25519", "rand", "peerid"] }
serde = { version = "1.0.219", features = ["derive"] }
sp-core = "37.0.0"
toml = "0.9.2"
rand = "0.8.5"
