[package]
name = "node-utils"
version = "0.1.0"
edition = "2024"
description = "Node utilities for Key and Docker Compose file generation"
authors = ["Vedhavyas Singareddi <ved@subspace.network>"]
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
]

[dependencies]
bip39 = { version = "2.2.0", features = ["rand"] }
clap = { version = "4.5.41", features = ["derive"] }
ed25519-dalek = "2.2.0"
env_logger = "0.11.8"
handlebars = "6.3.2"
hex = "0.4.3"
infisical = "0.0.3"
libp2p-identity = { version = "0.2.12", features = ["ed25519", "rand", "peerid"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sp-core = "38.0.0"
thiserror = "2.0.16"
toml = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
